--- a/style.css
+++ b/style.css
@@ -2,15 +2,17 @@
   font-family: 'Poppins', sans-serif;
   margin: 0;
 }
- /* Header part  */
+
+/* Header part  */
 .header {
   display: flex;
-  background-color:rgba(22, 22, 22, 1);
-  
+  background-color: rgba(22, 22, 22, 1);
+
   color: white;
   border-radius: 10px;
 }
-.header h1{
+
+.header h1 {
   font-size: 50px;
 }
 
@@ -27,34 +29,64 @@
   width: 50%;
   margin: 50px;
 }
-.banner img{
+
+.banner img {
   margin-left: 50px;
 }
-.header:hover img{
+
+.header:hover img {
   transform: scale(1.3);
 }
 
 /* blog section start  */
-.blog-section{
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  grid-gap: 50px;
-  margin-top: 30px;
-  margin: 30px;
-  margin-left: 100px;
+.blog-button{
+  display: flex;
 }
-.blog-part{
+.ab {
+  margin-top: 50px;
+  padding: 20px;
+  height: 230px;
+  width: 200px;
+  background-color: black;
+  border-radius: 20px;
+}
+
+.abc button {
+  display: block;
+  background-color: azure;
+  padding: 15px 50px;
+  margin: 20px;
+  border-radius: 20px;
+  font-size: 20px;
+}
+
+#blog {
+  background-color: red;
+}
+
+.blog-section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
+  margin-top: 50px;
+  margin-left: 50px;
+}
+
+.blog-part {
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   width: 312px;
   border-radius: 10px;
 }
-.transfer-detail{
+
+.transfer-detail {
   padding: 15px;
 }
-.blog-image img{
+
+.blog-image img {
   margin-bottom: 20px;
 }
-.transfer-detail a{
+
+.transfer-detail a {
   text-decoration: none;
   font-size: 20px;
   color: black;
@@ -63,10 +95,12 @@
   padding: 10px;
   border-radius: 5px;
 }
-.match-duration{
+
+.match-duration {
   margin-bottom: 10px;
 }
-.span-tag{
+
+.span-tag {
   margin: 20px;
   margin-bottom: 15px;
 }
